--- a/vakulya-ais2021-ga.tex
+++ b/vakulya-ais2021-ga.tex
@@ -311,7 +311,7 @@ Figures \ref{curve-sherlock} and \ref{curve-cat} show the change
 of best observed fitness after each generation for the Sherlock
 and the cat images. Different colors mean different maximal
 triangle numbers. With extremely low polygon count the approximation
-remains very rough. Adding more than approx\. 30 triangles
+remains very rough. Adding more than approx\@. 30 triangles
 does not make any quantitative improvement, some extra detail
 was observed up to 60 triangles. A recognizable image approximated
 with 20 triangles takes 139 bytes of data.
