--- a/references.bib
+++ b/references.bib
@@ -22,7 +22,7 @@
   title = "Genetic Algorithm for Shortest Driving Time in Intelligent Transportation Systems",
   year = "2008",
   booktitle = "International Conference on Multimedia and Ubiquitous Engineering 2008",
-  pages = "402-406",
+  pages = "402--406",
   doi = "10.1109/MUE.2008.16"
 }
 
@@ -43,7 +43,7 @@
 }
 
 @inproceedings{ga-scheduling,
-  author = "Lim, C., and Eoksu S.",
+  author = "Lim, C. and Eoksu S.",
   title = "Production planning in manufacturing/remanufacturing environment using genetic algorithm",
   booktitle = "Proceedings of the 7th annual conference on Genetic and evolutionary computation",
   year = "2005",
@@ -66,7 +66,7 @@
   volume = "2",
   number ="4",
   year = "2012",
-  pages = "143-154",
+  pages = "143--154",
 }
 
 @article{ga-trading,
@@ -85,7 +85,7 @@
   author = "Pare, S. and Bhandari, A. K. and Kumar, A. and Singh, G. K. and Khare, S.",
   title = "Satellite image segmentation based on different objective functions using genetic algorithm: a comparative study",
   booktitle = "2015 IEEE international conference on digital signal processing (DSP)",
-  pages = "730-734",
+  pages = "730--734",
   publisher = "IEEE",
 }
 
@@ -102,7 +102,105 @@
   author = "Deborah, H. and Arymurthy, A. M.",
   title = "Image enhancement and image restoration for old document image using genetic algorithm",
   booktitle = "2010 Second International Conference on Advances in Computing, Control, and Telecommunication Technologies",
-  pages = "108-112",
+  pages = "108--112",
   publisher = "IEEE",
 }
 
+@incollection{hecht1992,
+  title={Theory of the backpropagation neural network},
+  author={Hecht-Nielsen, Robert},
+  booktitle={Neural networks for perception},
+  pages={65--93},
+  year={1992},
+  publisher={Elsevier}
+}
+
+@article{galvan2021,
+  title={Neuroevolution in deep neural networks: Current trends and future challenges},
+  author={Galv{\'a}n, Edgar and Mooney, Peter},
+  journal={IEEE Transactions on Artificial Intelligence},
+  volume={2},
+  number={6},
+  pages={476--493},
+  year={2021},
+  publisher={IEEE}
+}
+
+@article{such2017,
+  title={Deep neuroevolution: Genetic algorithms are a competitive alternative for training deep neural networks for reinforcement learning},
+  author={Such, Felipe Petroski and Madhavan, Vashisht and Conti, Edoardo and Lehman, Joel and Stanley, Kenneth O and Clune, Jeff},
+  journal={arXiv preprint arXiv:1712.06567},
+  year={2017}
+}
+
+@article{bhoskar2015,
+  title={Genetic algorithm and its applications to mechanical engineering: A review},
+  author={Bhoskar, Ms Trupti and Kulkarni, Mr Omkar K and Kulkarni, Mr Ninad K and Patekar, Ms Sujata L and Kakandikar, GM and Nandedkar, VM},
+  journal={Materials Today: Proceedings},
+  volume={2},
+  number={4-5},
+  pages={2624--2630},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{buckley1994,
+  title={Fuzzy genetic algorithm and applications},
+  author={Buckley, James J and Hayashi, Yoichi},
+  journal={Fuzzy sets and systems},
+  volume={61},
+  number={2},
+  pages={129--136},
+  year={1994},
+  publisher={Elsevier}
+}
+
+@article{dawid1998,
+  title={On economic applications of the genetic algorithm: a model of the cobweb type},
+  author={Dawid, Herbert and Kopel, Michael},
+  journal={Journal of Evolutionary Economics},
+  volume={8},
+  number={3},
+  pages={297--315},
+  year={1998},
+  publisher={Springer}
+}
+
+@article{verma2012,
+  title={Role and applications of genetic algorithm in data mining},
+  author={Verma, Gunjan and Verma, Vineeta},
+  journal={International journal of computer applications},
+  volume={48},
+  number={17},
+  pages={5--8},
+  year={2012},
+  publisher={Citeseer}
+}
+
+@inproceedings{barman2017,
+  title={State of the art review of speech recognition using genetic algorithm},
+  author={Barman, Trishna and Deb, Nabamita},
+  booktitle={2017 IEEE International Conference on Power, Control, Signals and Instrumentation Engineering (ICPCSI)},
+  pages={2944--2946},
+  year={2017},
+  organization={IEEE}
+}
+
+@article{gonccalves2005,
+  title={A hybrid genetic algorithm for the job shop scheduling problem},
+  author={Gon{\c{c}}alves, Jos{\'e} Fernando and de Magalh{\~a}es Mendes, Jorge Jos{\'e} and Resende, Mauricio GC},
+  journal={European journal of operational research},
+  volume={167},
+  number={1},
+  pages={77--95},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@inproceedings{vakulya2021,
+  author = "G. Vakulya",
+  title = "Evaluation of a genetic algorithm based image approximation method",
+  booktitle = "AIS 2021-16th International Symposium on Applied Informatics and Related Areas - Proceedings",
+  year = "2021",
+  pages = "12--15",
+}
